# errorvec

./: Cargo.toml
src/: errorvec.rs  lib.rs  resiter.rs
src/errorvec/: tests.rs
