[package]
name = "errorvec"
description = "Utilities for tracking multiple errors."
license = "MIT"
documentation = "https://doc.rs/errorvec"
repository = "https://github.com/nathan-at-least/errorvec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
